<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blur_background">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="@drawable/logo_background"
                android:maxHeight="150dp"
                android:padding="10dp"
                android:src="@drawable/nabdh"
                android:tint="@color/white" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:textAllCaps="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="@string/descriptionTitle"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:padding="4dp"
                android:text="@string/description"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="@string/email"
                android:textAllCaps="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:padding="4dp"
                android:text="@string/emailDesc"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="@string/address"
                android:textAllCaps="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:padding="4dp"
                android:text="@string/addressDesc"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <ImageButton
                android:id="@+id/facebookIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:background="@drawable/dashes_borders_circle"
                android:padding="7dp"
                android:scaleType="centerInside"
                android:src="@drawable/facbook_icon" />

            <ImageButton
                android:id="@+id/instegramIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:background="@drawable/dashes_borders_circle"
                android:padding="7dp"
                android:scaleType="centerInside"
                android:src="@drawable/instagram_icon" />

            <ImageButton
                android:id="@+id/youtubeIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:background="@drawable/dashes_borders_circle"
                android:padding="7dp"
                android:scaleType="centerInside"
                android:src="@drawable/youtube_icon" />

            <ImageButton
                android:id="@+id/linkedinIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:background="@drawable/dashes_borders_circle"
                android:padding="7dp"
                android:scaleType="centerInside"
                android:src="@drawable/linkedin_icon" />

            <ImageButton
                android:id="@+id/twitterIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:background="@drawable/dashes_borders_circle"
                android:padding="7dp"
                android:scaleType="centerInside"
                android:src="@drawable/twitter_icon" />
        </LinearLayout>
    </LinearLayout>


</ScrollView>











